@@ -58,6 +58,7 @@ S3method("print", "check_package_datasets")
 S3method("print", "check_package_compact_datasets")
 S3method("print", "check_packages_used")
 S3method("print", "check_vignette_index")
+S3method("print", "compactPDF")
 
 S3method("toHTML", "packageIQR")
 S3method("toHTML", "news_db")
@@ -88,5 +89,6 @@ S3method("format", "checkS3methods")
 S3method("format", "checkTnF")
 S3method("format", "codocClasses")
 S3method("format", "codocData")
+S3method("format", "compactPDF")
 S3method("format", "subdir_tests")
 S3method("format", "undoc")
